[package]
name = "demo-http-client"
version = "0.1.0"
authors = ["Scott Matthews <scottmatthews343@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
# pio = ["esp-idf-sys/pio"]


[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
esp-idf-svc = { version = "0.42", features = ["experimental", "alloc"] }
# esp32-c3-dkc02-bsc = { path = "../../../espressif-trainings/common/lib/esp32-c3-dkc02-bsc" }
anyhow = "1.0"
toml-cfg = "0.1"
esp_idf_logger = "0.1.1"

# esp-idf-hal = "0.38"
embedded-svc = "0.22"
# embedded-hal = "0.2"

# wifi
esp32 = "0.12.0" # not needed?
# esp-idf-sys = { version = "=0.31.5" }
# esp-idf-svc = { version="=0.39.1", features = ["experimental", "alloc"] }
# esp-idf-hal = "0.38" satisfied by esp-idf-svc??
# embedded-svc = "=0.19"
# rgb = "0.8"
log = "0.4"
# anyhow = "1"
# toml-cfg = "0.1"
# riscv = { version = "0.7", features=["inline-asm"] }


[build-dependencies]
embuild = "0.29"
anyhow = "1"
